# ar_marker_detection

./: CMakeLists.txt  README.md  package.xml
launch/: fantastic_marker_detection.launch  gigE_cams.launch
msg/: marker_msg.msg
src/: automaticDictGen.cpp  fmd_consolidation.cpp  main.cpp  simple_single.cpp  vimba.cpp
